linux (4.17.6-2) UNRELEASED; urgency=medium

  * [armhf] drm/sun4i: Ignore ABI changes (fixes FTBFS)

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 12 Jul 2018 15:16:15 +0100

linux (4.17.6-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.17.4
    - [x86] spectre_v1: Disable compiler optimizations over
      array_index_mask_nospec()
    - [x86] xen: Add call of speculative_store_bypass_ht_init() to PV paths
    - [x86] UV: Add adjustable set memory block size function
    - [x86] UV: Use new set memory block size function
    - [x86] UV: Add kernel parameter to set memory block size
    - [x86] mce: Improve error message when kernel cannot recover
    - [x86] mce: Check for alternate indication of machine check recovery on
      Skylake
    - [x86] mce: Fix incorrect "Machine check from unknown source" message
    - [x86] mce: Do not overwrite MCi_STATUS in mce_no_way_out()
    - [x86] Call fixup_exception() before notify_die() in math_error()
    - [m68k] mm: Adjust VM area to be unmapped by gap size for __iounmap()
    - [m68k] mac: Fix SWIM memory resource end address
    - hwmon: (k10temp) Add support for Stoney Ridge and Bristol Ridge CPUs
    - mtd: spi-nor: intel-spi: Fix atomic sequence handling
    - serial: sh-sci: Use spin_{try}lock_irqsave instead of open coding version
    - signal/xtensa: Consistenly use SIGBUS in do_unaligned_user
    - PM / Domains: Fix error path during attach in genpd
    - PCI / PM: Do not clear state_saved for devices that remain suspended
    - ACPI / LPSS: Avoid PM quirks on suspend and resume from S3
    - PM / core: Fix supplier device runtime PM usage counter imbalance
    - PM / OPP: Update voltage in case freq == old_freq
    - mmc: renesas_sdhi: really fix WP logic regressions
    - usb: do not reset if a low-speed or full-speed device timed out
    - 1wire: family module autoload fails because of upper/lower case mismatch.