@@ -27,6 +27,9 @@ Build-Depends-Arch:
 # used by upstream to build signing tools and to process certificates
  libssl-dev:native <!stage1>, libssl-dev <!stage1 !pkg.linux.notools cross>,
  openssl (>= 1.1.0-1~) <!stage1>,
+# used by upstream to build objtool (native for amd64 images; host arch for
+# linux-kbuild) and perf (host arch)
+ libelf-dev:native [amd64] <!stage1>, libelf-dev <!stage1 !pkg.linux.notools>,
 # used by upstream to build perf documentation
  asciidoc-base <!stage1 !nodoc !pkg.linux.notools>,
  xmlto <!stage1 !nodoc !pkg.linux.notools>,
@@ -37,8 +40,6 @@ Build-Depends-Arch:
 # - libbabeltrace-ctf-dev may or may not be needed as well
  libbabeltrace-dev (>= 1.5.3-2~) <!stage1 !pkg.linux.notools !nopython> | libbabeltrace-ctf-dev (>= 1.5.0) <!stage1 !pkg.linux.notools !nopython>,
  libdw-dev <!stage1 !pkg.linux.notools !nopython>,
-# needed for objtool with CONFIG_STACK_VALIDATION=y and CONFIG_UNWINDER_ORC=y
- libelf-dev <!stage1>,
  libiberty-dev <!stage1 !pkg.linux.notools !nopython>,
  libnewt-dev <!stage1 !pkg.linux.notools !nopython>,
  libnuma-dev [amd64 arm64 hppa i386 mips mips64 mips64el mipsel mipsn32 mipsn32el mipsr6 mipsr6el mipsn32r6 mipsn32r6el mips64r6 mips64r6el powerpc powerpcspe ppc64 ppc64el sparc x32] <!stage1 !pkg.linux.notools !nopython>,
