@@ -1,6 +1,8 @@
 linux (4.17.6-2) UNRELEASED; urgency=medium
 
   * [armhf] drm/sun4i: Ignore ABI changes (fixes FTBFS)
+  * debian/control: Fix arch/profile qualifications for libelf-dev
+    build-dependency
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 12 Jul 2018 15:16:15 +0100
 
